--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "grunt-contrib-watch": "*",
     "grunt-express-server": "^0.4.19",
 	"grunt-open": "*",
-	"express": "4.x"
+	"express": "4.x",
+	"q": "*"
   },
   "engines": {
     "node": ">=0.10.0"
